Fix anchor links that are covered by the fixed header.

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,14 @@ $scotch-secondary: #FF7B7B;
 %oswald { font-family: 'Oswald', sans-serif; }
 %roboto { font-family: 'Roboto Condensed', sans-serif; }
 
+/* Fix anchor links http://stackoverflow.com/questions/4086107/html-positionfixed-page-header-and-in-page-anchors */
+:target:before {
+  content:"";
+  display:block;
+  height:80px; /* fixed header height*/
+  margin:-80px 0 0; /* negative fixed header height */
+}
+
 
 body {
     @extend %roboto;
